# open_loop_wheel_odometry

./: CMakeLists.txt  README.md  package.xml  rosdoc.yaml
.github/workflows/: ci.yaml
include/open_loop_wheel_odometry/: ackermann_odom.h  diff_drive_odom.h  odometry.h  open_loop_wheel_odometry.h
src/: ackermann_odom.cpp  diff_drive_odom.cpp  open_loop_wheel_odometry.cpp
test/: test_ackermann.py  test_ackermann.test  test_diff_drive.py  test_diff_drive.test
